//=================================================================================================
// Copyright (C) 2023-2024 HEPHAESTUS Contributors
//=================================================================================================

#include "hephaestus/types_protobuf/dummy_type.h"

#include "hephaestus/types/dummy_type.h"
#include "hephaestus/types_protobuf/std_chrono_timepoint.h"

namespace heph::types {

//=================================================================================================
// Vector
//=================================================================================================
template <typename T, typename ProtoT>
auto toProto(google::protobuf::RepeatedField<ProtoT>& proto_repeated_field, const std::vector<T>& vec)
    -> void {
  proto_repeated_field.Clear();  // Ensure that the repeated field is empty before adding elements.
  proto_repeated_field.Reserve(static_cast<int>(vec.size()));
  for (const auto& value : vec) {
    proto_repeated_field.Add(value);
  }
}

template <typename T, typename ProtoT>
auto fromProto(const google::protobuf::RepeatedField<ProtoT>& proto_repeated_field, std::vector<T>& vec)
    -> void {
  vec.clear();  // Ensure that the vector is empty before adding elements.
  vec.reserve(static_cast<size_t>(proto_repeated_field.size()));
  for (const auto& proto_value : proto_repeated_field) {
    vec.push_back(proto_value);
  }
}

//=================================================================================================
// DummyTypeDummyEnum
//=================================================================================================
auto getAsProto(const DummyType::DummyEnum& dummy_enum) -> proto::DummyTypeDummyEnum {
  switch (dummy_enum) {
    case heph::types::DummyType::DummyEnum::A:
      return proto::DummyTypeDummyEnum::A;
    case heph::types::DummyType::DummyEnum::B:
      return proto::DummyTypeDummyEnum::B;
    case heph::types::DummyType::DummyEnum::C:
      return proto::DummyTypeDummyEnum::C;
    case heph::types::DummyType::DummyEnum::D:
      return proto::DummyTypeDummyEnum::D;
    case heph::types::DummyType::DummyEnum::E:
      return proto::DummyTypeDummyEnum::E;
    case heph::types::DummyType::DummyEnum::F:
      return proto::DummyTypeDummyEnum::F;
    case heph::types::DummyType::DummyEnum::G:
      return proto::DummyTypeDummyEnum::G;
    default:  // A default case is needed to suppress warnings about unhandled enum values.
      return {};
  }
}

auto getFromProto(const proto::DummyTypeDummyEnum& proto_dummy_enum) -> DummyType::DummyEnum {
  switch (proto_dummy_enum) {
    case proto::DummyTypeDummyEnum::A:
      return heph::types::DummyType::DummyEnum::A;
    case proto::DummyTypeDummyEnum::B:
      return heph::types::DummyType::DummyEnum::B;
    case proto::DummyTypeDummyEnum::C:
      return heph::types::DummyType::DummyEnum::C;
    case proto::DummyTypeDummyEnum::D:
      return heph::types::DummyType::DummyEnum::D;
    case proto::DummyTypeDummyEnum::E:
      return heph::types::DummyType::DummyEnum::E;
    case proto::DummyTypeDummyEnum::F:
      return heph::types::DummyType::DummyEnum::F;
    case proto::DummyTypeDummyEnum::G:
      return heph::types::DummyType::DummyEnum::G;
    default:  // A default case is needed to capture values autogenerated by protobuf.
      return {};
  }
}

//=================================================================================================
// DummyPrimitivesType
//=================================================================================================
auto toProto(proto::DummyPrimitivesType& proto_dummy_primitives_type,
             const DummyPrimitivesType& dummy_primitives_type) -> void {
  proto_dummy_primitives_type.set_dummybool(dummy_primitives_type.dummy_bool);

  proto_dummy_primitives_type.set_dummyint8t(dummy_primitives_type.dummy_int8_t);
  proto_dummy_primitives_type.set_dummyint16t(dummy_primitives_type.dummy_int16_t);
  proto_dummy_primitives_type.set_dummyint32t(dummy_primitives_type.dummy_int32_t);
  proto_dummy_primitives_type.set_dummyint64t(dummy_primitives_type.dummy_int64_t);

  proto_dummy_primitives_type.set_dummyuint8t(dummy_primitives_type.dummy_uint8_t);
  proto_dummy_primitives_type.set_dummyuint16t(dummy_primitives_type.dummy_uint16_t);
  proto_dummy_primitives_type.set_dummyuint32t(dummy_primitives_type.dummy_uint32_t);
  proto_dummy_primitives_type.set_dummyuint64t(dummy_primitives_type.dummy_uint64_t);

  proto_dummy_primitives_type.set_dummyfloat(dummy_primitives_type.dummy_float);
  proto_dummy_primitives_type.set_dummydouble(dummy_primitives_type.dummy_double);
}

auto fromProto(const proto::DummyPrimitivesType& proto_dummy_primitives_type,
               DummyPrimitivesType& dummy_primitives_type) -> void {
  dummy_primitives_type.dummy_bool = proto_dummy_primitives_type.dummybool();

  dummy_primitives_type.dummy_int8_t =
      static_cast<decltype(dummy_primitives_type.dummy_int8_t)>(proto_dummy_primitives_type.dummyint8t());
  dummy_primitives_type.dummy_int16_t =
      static_cast<decltype(dummy_primitives_type.dummy_int16_t)>(proto_dummy_primitives_type.dummyint16t());
  dummy_primitives_type.dummy_int32_t = proto_dummy_primitives_type.dummyint32t();
  dummy_primitives_type.dummy_int64_t = proto_dummy_primitives_type.dummyint64t();

  dummy_primitives_type.dummy_uint8_t =
      static_cast<decltype(dummy_primitives_type.dummy_uint8_t)>(proto_dummy_primitives_type.dummyuint8t());
  dummy_primitives_type.dummy_uint16_t =
      static_cast<decltype(dummy_primitives_type.dummy_uint16_t)>(proto_dummy_primitives_type.dummyuint16t());
  dummy_primitives_type.dummy_uint32_t = proto_dummy_primitives_type.dummyuint32t();
  dummy_primitives_type.dummy_uint64_t = proto_dummy_primitives_type.dummyuint64t();

  dummy_primitives_type.dummy_float = proto_dummy_primitives_type.dummyfloat();
  dummy_primitives_type.dummy_double = proto_dummy_primitives_type.dummydouble();
}

//=================================================================================================
// DummyType
//=================================================================================================
auto toProto(proto::DummyType& proto_dummy_type, const DummyType& dummy_type) -> void {
  toProto(*proto_dummy_type.mutable_dummy_primitives_type(), dummy_type.dummy_primitives_type);

  proto_dummy_type.set_dummyenum(getAsProto(dummy_type.dummy_enum));

  ::heph::types::toProto(*proto_dummy_type.mutable_dummytimestamp(), dummy_type.dummy_timestamp);

  proto_dummy_type.set_dummystring(dummy_type.dummy_string);

  toProto(*proto_dummy_type.mutable_dummyvector(), dummy_type.dummy_vector);
}

auto fromProto(const proto::DummyType& proto_dummy_type, DummyType& dummy_type) -> void {
  fromProto(proto_dummy_type.dummy_primitives_type(), dummy_type.dummy_primitives_type);

  dummy_type.dummy_enum = getFromProto(proto_dummy_type.dummyenum());

  ::heph::types::fromProto(proto_dummy_type.dummytimestamp(), dummy_type.dummy_timestamp);

  dummy_type.dummy_string = proto_dummy_type.dummystring();

  fromProto(proto_dummy_type.dummyvector(), dummy_type.dummy_vector);
}

}  // namespace heph::types
